--- a/estilos.css
+++ b/estilos.css
@@ -91,7 +91,7 @@ thead{
   overflow: hidden;
   text-align: center;
   text-transform: uppercase;
-  font-size: 60px;
+  font-size: 50px;
   font-weight: bold;
   font-family:Nosifer;
   font-weight: 400;
@@ -100,6 +100,31 @@ thead{
   background-position-y: center;
   background-clip: text;
 }
+/*********texto animado ********/
+.marquee {
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  box-sizing: border-box;
+  color: rgb(255, 17, 0);
+  font-family:monospace;
+}
+
+.marquee p {
+  display: inline-block;
+  padding-left: 100%;
+  animation: marquee 20s linear infinite;
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+/*********texto animado ********/
 .BIENVENIDO{
   text-align: center;
   color:transparent;
@@ -7054,8 +7079,8 @@ aside{
   }
   /*anuncio publicitario .js*/
   .ad-container {
-    width: 200px; /* Ancho del contenedor del anuncio */
-    height: 150px; /* Alto del contenedor del anuncio */
+    width: 185px; /* Ancho del contenedor del anuncio */
+    height: 185x; /* Alto del contenedor del anuncio */
     border: 1px solid #ccc; /* Borde para el contenedor del anuncio */
     overflow: hidden; /* Para evitar que la imagen se desborde del contenedor */
     margin: 0% auto;
